Create post blog with quill and dragAndDrop

--- a/src/index.css
+++ b/src/index.css
@@ -110,3 +110,10 @@
   src: local('Kanit-ThinItalic'),
     url('../public/fonts/Kanit-ThinItalic.ttf') format('truetype');
 }
+
+.containerQuill{
+  .quillEditor{
+    height: 100%;
+    border: none;
+  }
+}
